force-app/main/default/objects/dataDeliveryAndCollection__c/dataDeliveryAndCollection__c.object-meta.xml
<CustomObject>
    <label>Delivery and Collection</label>
    <nameField>
        <label>Delivery and Collection</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery and Collection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>