force-app/main/default/objects/dataDeliveryAndCollection__c/fields/abrd__c.field-meta.xml
<CustomField>
    <fullName>abrd__c</fullName>
    <label>abrd</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>