force-app/main/default/objects/dataDeliveryAndCollection__c/fields/cobl__c.field-meta.xml
<CustomField>
    <fullName>cobl__c</fullName>
    <label>cobl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>