force-app/main/default/objects/dataDeliveryAndCollection__c/fields/cola__c.field-meta.xml
<CustomField>
    <fullName>cola__c</fullName>
    <label>cola</label>
    <length>255</length>
    <type>Text</type>
</CustomField>