force-app/main/default/objects/dataDeliveryAndCollection__c/fields/con1__c.field-meta.xml
<CustomField>
    <fullName>con1__c</fullName>
    <label>con1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>