force-app/main/default/objects/dataDeliveryAndCollection__c/fields/con2__c.field-meta.xml
<CustomField>
    <fullName>con2__c</fullName>
    <label>con2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>