force-app/main/default/objects/dataDeliveryAndCollection__c/fields/coor__c.field-meta.xml
<CustomField>
    <fullName>coor__c</fullName>
    <label>coor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>