force-app/main/default/objects/dataDeliveryAndCollection__c/fields/copl__c.field-meta.xml
<CustomField>
    <fullName>copl__c</fullName>
    <label>copl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>