force-app/main/default/objects/dataDeliveryAndCollection__c/fields/cost__c.field-meta.xml
<CustomField>
    <fullName>cost__c</fullName>
    <label>cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>