force-app/main/default/objects/dataDeliveryAndCollection__c/fields/dlbl__c.field-meta.xml
<CustomField>
    <fullName>dlbl__c</fullName>
    <label>dlbl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>