force-app/main/default/objects/dataDeliveryAndCollection__c/fields/dlla__c.field-meta.xml
<CustomField>
    <fullName>dlla__c</fullName>
    <label>dlla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>