force-app/main/default/objects/dataDeliveryAndCollection__c/fields/dln1__c.field-meta.xml
<CustomField>
    <fullName>dln1__c</fullName>
    <label>dln1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>