force-app/main/default/objects/dataDeliveryAndCollection__c/fields/dln2__c.field-meta.xml
<CustomField>
    <fullName>dln2__c</fullName>
    <label>dln2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>