force-app/main/default/objects/dataDeliveryAndCollection__c/fields/dlor__c.field-meta.xml
<CustomField>
    <fullName>dlor__c</fullName>
    <label>dlor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>