force-app/main/default/objects/dataDeliveryAndCollection__c/fields/dlpl__c.field-meta.xml
<CustomField>
    <fullName>dlpl__c</fullName>
    <label>dlpl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>