force-app/main/default/objects/dataDeliveryAndCollection__c/fields/dlst__c.field-meta.xml
<CustomField>
    <fullName>dlst__c</fullName>
    <label>dlst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>