force-app/main/default/objects/dataDeliveryAndCollection__c/fields/mvnr__c.field-meta.xml
<CustomField>
    <fullName>mvnr__c</fullName>
    <label>mvnr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>